# payment-automatic

./: Cargo.toml  README.md
src/: decision_engine.rs  main.rs  payments.rs  stripe_example.rs
