[package]
name = "payment-automatic"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.12", features = ["json"] }
tokio =  { version = "1.43.0", features = ["full"] }
async-stripe = { version = "0.40.0",  features = ["runtime-tokio-hyper"] }
crb = "0.0.31"
mcp_rust_schema = "0.1.4"
openssl = "0.10.71"