[package]
name = "payment-automatic"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["json"] }
tokio =  { version = "1.45.0, features = ["full"] }
async-stripe = { version = "0.41.0",  features = ["runtime-tokio-hyper"] }
crb = "0.0.38"
mcp_rust_schema = "0.1.4"
openssl = "0.10.72"
ring = "0.17.14"