[package]
name = "payment-automatic"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.13.0", features = ["json"] }
tokio =  { version = "1.48.0", features = ["full"] }
async-stripe = { version = "0.41.0",  features = ["runtime-tokio-hyper"] }
crb = "0.0.38"
mcp_rust_schema = "0.1.4"
openssl = "0.10.75"
ring = "0.17.14"